@@ -1,3 +1,8 @@
+2003-05-15  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/GSInfoPanel.m: Draw authors in the order they occur in
+	the info.plist
+
 2003-05-14 Serg Stoyan <stoyan@on.com.ua>
 
 	* Source/NSMenuView.m 
